# go_template

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  README.zh-CN.md  README.zh-TW.md  go.mod  go.sum
.devcontainer/: Dockerfile  README.md  README_cn.md  devcontainer.json
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labeler.yml
.github/agents/: update-repo.agent.md
.github/workflows/: auto_labeler.yml  build_image.yml  build_package.yml  build_release.yml  code-quality-check.yml  code_scan.yml  jira.yml  pre-commit-updater.yml  secret_scan.yml  semantic-pull-request.yml  test.yml  updater.yml
cli/nodejs/: package.json
cli/python/: pyproject.toml
cli/python/src/go_template/: __init__.py
cmd/app/: main.go  main_test.go
cmd/claude_analysis/: README.md  README.zh-CN.md  README.zh-TW.md  main.go
cmd/cli/: main.go  main_test.go
cmd/go-template/: main.go
cmd/go_template/: main.go
cmd/installer/: main.go
cmd/installer/internal/auth/: gaisf.go
cmd/installer/internal/config/: settings.go
configs/: managed-settings.json
core/config/: config.go  config_test.go
core/telemetry/: client.go  input.go  parser.go
core/version/: version.go  version_test.go
docker/: Dockerfile
examples/: claude_code_log.json
internal/testutil/: testutil.go
scripts/: install_binaries.sh
tests/: mode_test.go  parser_test.go  test_conversation.jsonl
tests/benchmark/: benchmark_test.go
tests/fuzz/: fuzz_test.go
tests/integration/: integration_test.go
(+13 files in other folders)
